<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration"
    android:background="@drawable/bg">

    <android.support.v7.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="20dp"
                android:ems="5"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="20dp"
                android:ems="5"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="15dp" />

            <EditText
                android:id="@+id/userMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="20dp"
                android:ems="5"
                android:hint="@string/mobileNo_hint"
                android:inputType="phone"
                android:padding="15dp" />

            <EditText
                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_address"
                android:drawablePadding="20dp"
                android:ems="5"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                android:padding="15dp" />

            <RadioGroup
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                android:padding="5sp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5sp"
                    android:text="@string/role"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/studentRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/tutorRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tutor" />
            </RadioGroup>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/yello"
                android:text="Register" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/already_registered"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textColor="#FDB201"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Designed By Muhammad Farhan"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>